# serious-games-lab

./: .gitignore  README.md  calculatingScore.txt  install.sh
SAT/freeFalconSource/: BUG-001-RESOLUTION.md  CLAUDE.md  CMakeLists.txt  Doxyfile  INTEGRATION_TEST_REPORT.md  TEST_RESULTS.md  test_flight.sh  test_flight2.sh
SAT/freeFalconSource/.claude/: settings.local.json
SAT/freeFalconSource/docs/: main_menu_buttons.md
SAT/freeFalconSource/src/: CMakeLists.txt  FALCLIB  FASTMATH.H  Falcsnd  Fastmath.h  REDMACROS.H  SUBRANGE.H
SAT/freeFalconSource/src/acmi/: CMakeLists.txt
SAT/freeFalconSource/src/acmi/src/: acmicam.cpp  acmiloop.cpp  acmitape.cpp  acmiui.cpp  acmiview.cpp
SAT/freeFalconSource/src/amd/inc/: ADSP.H  AMATH.H  AMATRIX.H  AMD3DX.H  AMDLIB.H  ATRANS.H  AVECTOR.H  QUAT.H
SAT/freeFalconSource/src/autoplay/: RESOURCE.H
SAT/freeFalconSource/src/campaign/: CMakeLists.txt
SAT/freeFalconSource/src/campaign/camplib/: CMakeLists.txt  atcbrain.cpp  campbase.cpp  campterr.cpp  campwp.cpp  find.cpp  name.cpp  objectiv.cpp  persist.cpp  ptdata.cpp  relation.cpp  unit.cpp
SAT/freeFalconSource/src/campaign/camptask/: CMakeLists.txt  airunit.cpp  atm.cpp  battalio.cpp  brigade.cpp  flight.cpp  gndunit.cpp  gtm.cpp  mission.cpp  navunit.cpp  ntm.cpp  package.cpp  squadron.cpp
SAT/freeFalconSource/src/campaign/camptool/: CMakeLists.txt  campdriv.cpp  dialog.cpp  display.cpp  unitdlg.cpp
SAT/freeFalconSource/src/campaign/campui/: CMakeLists.txt  acselect.cpp  brief.cpp  campjoin.cpp  campstr.cpp  misseval.cpp  options.cpp  pilot.cpp
SAT/freeFalconSource/src/campaign/campupd/: CMakeLists.txt  campaign.cpp  cmpclass.cpp  cmpevent.cpp  dogfight.cpp  gamemgr.cpp  iaction.cpp  nofly.cpp  supply.cpp  tactics.cpp  update.cpp  weather.cpp
SAT/freeFalconSource/src/campaign/include/: ACSELECT.H  AIINPUT.H  AIRUNIT.H  ASEARCH.H  ASGLOBL.H  ATM.H  BATTALION.H  BEXPAND.H  BRIEF.H  BRIGADE.H  CAMPAIGN.H  CAMPBASE.H  CAMPCELL.H  CAMPDISP.H  CAMPDRIV.H  CAMPJOIN.H  CAMPLIST.H  CAMPMAP.H  CAMPRWY.H  CAMPSTR.H  CAMPTERR.H  CAMPVU.H  CAMPWEAP.H  CAMPWP.H  CMPAWACS.H  CMPCLASS.H  CMPEVENT.H  CMPGLOBL.H  CMPRADAR.H  CONVERT.H  CUIEVENT.H  CampLib.h  Cmpglobl.h  Cmpradar.h  DIALOG.H  DIVISION.H  DOGFIGHT.H  ERRORLOG.H  EVENTLOG.H  EVTPARSE.H  (+48 more)
SAT/freeFalconSource/src/codelib/: CMakeLists.txt
SAT/freeFalconSource/src/codelib/include/: OMNI.H  Omni.h
SAT/freeFalconSource/src/comms/: CAPI.H  CAPIPRIV.H  CMakeLists.txt  COMDPLAY.H  FNDPROTO.H  PROTOFILT.H  RUDP.H  TCP.H  WS2INIT.H  WSPROTOS.H  capi.c  capipriv.h  rudp.c  tcp.c  udp.c  ws2init.c
SAT/freeFalconSource/src/comms/include/: CAPIBWCONTROL.H  CAPIBWFSM.H  CAPIBWSTATE.H  CAPIOPT.H  COMLIST.H
SAT/freeFalconSource/src/compat/: APITypes.h  ATLBASE.H  ATLCOM.H  AtlBase.h  AtlCom.h  AtlWin.h  Atlbase.h  CGUID.H  CMakeLists.txt  COMDEF.H  COMMCTRL.H  COMPAT_MMSYSTEM.H  COMPAT_TYPES.H  COMPAT_WINBASE.H  COMPAT_WINGDI.H  COMPAT_WINUSER.H  Commctrl.h  Compat_mmsystem.h  Compat_winbase.h  Compat_wingdi.h  Compat_winuser.h  D3D.H  D3DTYPES.H  D3DX.H  D3DXCORE.H  D3DXMATH.H  D3d.h  D3dtypes.h  D3dxcore.h  D3dxmath.h  DDRAW.H  DINPUT.H  DIRECT.H  DPLAY8.H  DSOUND.H  Ddraw.h  Dinput.h  Dsound.h  INITGUID.H  Initguid.h  (+68 more)
SAT/freeFalconSource/src/crashhandler/: BUGSLAYERUTIL.H  CMakeLists.txt  CRASHHANDLER.H  CRITICALSECTION.H  CRTDBG_INTERNALS.H  DBGHELP_MINDUMP.H  DIAGASSERT.H  INTERNAL.H  MEMDUMPERVALIDATOR.H  MINIDUMP.H  MSJDBG.H  PSAPI.H  SYMBOLENGINE.H  WARNINGSON.H  WarningsOff.h  crashhandler.cpp  crashhandler_linux.cpp  memdumpervalidator.cpp
SAT/freeFalconSource/src/dxutil/: DDUTIL.H  DSUTIL.H
SAT/freeFalconSource/src/falclib/: CMakeLists.txt  classtbl.cpp  dispcfg.cpp  dispopts.cpp  ehandler.cpp  entity.cpp  f4comms.cpp  f4find.cpp  falcgame.cpp  falcsess.cpp  filememmap.cpp  mddriver.cpp  memmgr.c  playerop.cpp  rules.cpp  theaterdef.cpp  threadmgr.cpp  timerthread.cpp
SAT/freeFalconSource/src/falclib/include/: ARRAY.H  CAMP2SIM.H  (+49 more)
SAT/freeFalconSource/src/falcsnd/: CMakeLists.txt  COMP.H  CONV.H  FALCVOICE.H  FRONTEND.H  LHSP.H  MLRVOICE.H  PSOUND.H  TRANSPRT.H  VOICEFILTER.H  VOICEMANAGER.H  VOICEMAPPER.H  WINAMPFRONTEND.H  adpcm.cpp  fsound.cpp  imadpcm.cpp  mlrvoice.cpp  mlrvoicehandle.cpp  psound.cpp  voicefilter.cpp  voicemanager.cpp  winampfrontend.cpp  winampfrontend.h
SAT/freeFalconSource/src/ffviper/: CMakeLists.txt  ff_linux_debug.h  main_linux.cpp
SAT/freeFalconSource/src/graphics/: CMakeLists.txt  DXEngine
SAT/freeFalconSource/src/include/: COMSUP.H
SAT/freeFalconSource/src/mathlib/: BBOX.H  CMakeLists.txt  COLOR.H  ENVELOPECURVE.H  EULER.H  EULERANGLES.H  LINE.H  MATRIX.H  MATRIX33.H  MATRIX44.H  MATRIXDEFS.H  PKNORM.H  PLANE.H  POLAR.H  QUATERNION.H  RECTANGLE.H  SPHERE.H  TRANSFORM33.H  TRANSFORM44.H  TRIANGLE.H  VECTOR.H  VECTOR2.H  VECTOR3.H  VECTOR3ENVELOPECURVE.H  VECTOR4.H  math.h
SAT/freeFalconSource/src/movie/: AVIMOVIE.H  CMakeLists.txt  RIFFIO.H  SURFACE.H
SAT/freeFalconSource/src/sim/: CMakeLists.txt
SAT/freeFalconSource/src/tools/: CMakeLists.txt
SAT/freeFalconSource/src/ui/: CMakeLists.txt
SAT/freeFalconSource/src/ui95/: CANIM.H  CANIMRC.H  CBASE.H  CBITMAP.H  CBLIP.H  CBOX.H  CBUTTONS.H  CCLOCK.H  CCOLOR.H  CCONTROL.H  CCURSOR.H  CCUSTOM.H  CEDITBOX.H  CFILL.H  CFONTRES.H  CFONTS.H  CHANDLER.H  CHASH.H  CHELP.H  CIMAGERC.H  CKBD.H  CLINE.H  CLISTBOX.H  CMARQUE.H  CMOVIE.H  CMakeLists.txt  CPANNER.H  CPARSER.H  CPOPMGR.H  CPOPUP.H  CRESMGR.H  CSCLBMP.H  CSCROLL.H  CSLIDER.H  CSNDBITE.H  CSOUNDRC.H  CSTRINGRC.H  CTEXT.H  CTHOOK.H  CTILE.H  (+23 more)
SAT/freeFalconSource/src/ui95_ext/: CBEYE.H  CDOGFLT.H  CDRAWLST.H  CENTITY.H  CFEATURE.H  CFLIGHT.H  CHISTORY.H  CICONS.H  CLEVEL.H  CMAPMVR.H  CMISSION.H  CMakeLists.txt  CPACKAGE.H  CPILOT.H  CPLAYER.H  CSQUAD.H  CTHREAT.H  CVICTORY.H  CWAYPNT.H  UI95_EXT.H  cthreat.cpp
SAT/freeFalconSource/src/utils/: BITIO.H  LZSS.H  LZSSOPT.H  lzss.cpp  setup.cpp
SAT/freeFalconSource/src/voicecomunication/: DXUTIL.H  VOICECOM.H
SAT/freeFalconSource/src/vu2/: CMakeLists.txt
SAT/freeFalconSource/tools/: generate_cmake.py  generate_cmake_v2.py
(+1712 files in other folders)
