# falclib library

set(FALCLIB_SOURCES
    alist.cpp
    classtbl.cpp
    dispcfg.cpp
    dispopts.cpp
    drawable.cpp
    ehandler.cpp
    entity.cpp
    f4comms.cpp
    f4find.cpp
    f4vu.cpp
    falcent.cpp
    falcgame.cpp
    falclist.cpp
    falcmem.cpp
    falcmesg.cpp
    falcsess.cpp
    filemap.cpp
    filememmap.cpp
    getsimobjectdata.cpp
    invalidbufferexception.cpp
    lookuptable.cpp
    mddriver.cpp
    memmgr.c
    mesg.cpp
    mesgstr.cpp
    messages.cpp
    msgsrc/addsfxmessage.cpp
    msgsrc/airaimodechange.cpp
    msgsrc/airtaskingmsg.cpp
    msgsrc/atccmdmsg.cpp
    msgsrc/atcmsg.cpp
    msgsrc/awacsmsg.cpp
    msgsrc/campdatamsg.cpp
    msgsrc/campdirtydatamsg.cpp
    msgsrc/campeventdatamsg.cpp
    msgsrc/campeventmsg.cpp
    msgsrc/campmsg.cpp
    msgsrc/camptaskingmsg.cpp
    msgsrc/campweaponfiremsg.cpp
    msgsrc/controlsurfacemsg.cpp
    msgsrc/damagemsg.cpp
    msgsrc/deathmessage.cpp
    msgsrc/divertmsg.cpp
    msgsrc/dlinkmsg.cpp
    msgsrc/ejectmsg.cpp
    msgsrc/facmsg.cpp
    msgsrc/falconflightplanmsg.cpp
    msgsrc/gndtaskingmsg.cpp
    msgsrc/graphicstextdisplaymsg.cpp
    msgsrc/landingmessage.cpp
    msgsrc/laserdesignatemsg.cpp
    msgsrc/missileendmsg.cpp
    msgsrc/missionrequestmsg.cpp
    msgsrc/navaltaskingmsg.cpp
    msgsrc/objectivemsg.cpp
    msgsrc/playerstatusmsg.cpp
    msgsrc/radiochattermsg.cpp
    msgsrc/regenerationmsg.cpp
    msgsrc/requestaircraftslot.cpp
    msgsrc/requestcampaigndata.cpp
    msgsrc/requestcampaignmsg.cpp
    msgsrc/requestdogfightinfo.cpp
    msgsrc/requestdogfightslot.cpp
    msgsrc/requestlogbook.cpp
    msgsrc/requestobject.cpp
    msgsrc/requestpersistantlist.cpp
    msgsrc/requestsimmoverposition.cpp
    msgsrc/requeststatusmsg.cpp
    msgsrc/requestteaminfomsg.cpp
    msgsrc/requestunitposition.cpp
    msgsrc/sendaircraftslot.cpp
    msgsrc/sendcampaignmsg.cpp
    msgsrc/sendchatmessage.cpp
    msgsrc/senddogfightinfo.cpp
    msgsrc/senddogfightslot.cpp
    msgsrc/sendevalmsg.cpp
    msgsrc/sendimage.cpp
    msgsrc/sendlogbook.cpp
    msgsrc/sendobjdata.cpp
    msgsrc/sendpersistantlist.cpp
    msgsrc/sendsimmoverposition.cpp
    msgsrc/sendteaminfomsg.cpp
    msgsrc/senduimsg.cpp
    msgsrc/sendunitdata.cpp
    msgsrc/sendunitposition.cpp
    msgsrc/sendvcmsg.cpp
    msgsrc/simcampmsg.cpp
    msgsrc/simdatatoggle.cpp
    msgsrc/simdirtydatamsg.cpp
    msgsrc/simtimingmsg.cpp
    msgsrc/tankermsg.cpp
    msgsrc/teammsg.cpp
    msgsrc/timingmsg.cpp
    msgsrc/trackmsg.cpp
    msgsrc/unitassignmentmsg.cpp
    msgsrc/unitmsg.cpp
    msgsrc/updateailist.cpp
    msgsrc/updatemapposition.cpp
    msgsrc/updatesettings.cpp
    msgsrc/voicedatamsg.cpp
    msgsrc/weaponfiremsg.cpp
    msgsrc/weaponusagemsg.cpp
    msgsrc/weathermsg.cpp
    msgsrc/wingmanmsg.cpp
    playerop.cpp
    prof_gather.c
    prof_process.c
    prof_win32.c
    rules.cpp
    theaterdef.cpp
    threadmgr.cpp
    threads.cpp
    timerthread.cpp
    token.cpp
    twoddraw.cpp
    vrinput.cpp
    vuxcreat.cpp
    weapon.cpp
)

add_library(falclib STATIC ${FALCLIB_SOURCES})

target_include_directories(falclib PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${FF_SRC_DIR}
    ${FF_SRC_DIR}/include
    ${FF_SRC_DIR}/falclib/include
    ${FF_SRC_DIR}/codelib/include
    ${FF_SRC_DIR}/vu2/include
    ${FF_SRC_DIR}/sim/include
    ${FF_SRC_DIR}/campaign/include
    ${FF_SRC_DIR}/ui/include
    ${FF_SRC_DIR}/graphics
    ${FF_SRC_DIR}/graphics/include
)