# graphics subdirectories

add_subdirectory(3dlib)
add_subdirectory(bsplib)
add_subdirectory(ddstuff)
add_subdirectory(dxengine)
add_subdirectory(nvdxt)
add_subdirectory(objects)
add_subdirectory(renderer)
add_subdirectory(terrain)
add_subdirectory(texture)
add_subdirectory(utils)
add_subdirectory(weather)