# sim subdirectories

add_subdirectory(aircraft)
add_subdirectory(airframe)
add_subdirectory(bomb)
add_subdirectory(cockpit)
add_subdirectory(digi)
add_subdirectory(displays)
add_subdirectory(eject)
add_subdirectory(faults)
add_subdirectory(fcc)
add_subdirectory(feature)
add_subdirectory(ground)
add_subdirectory(guns)
add_subdirectory(hdigi)
add_subdirectory(helo)
add_subdirectory(icp)
add_subdirectory(irst)
add_subdirectory(missile)
add_subdirectory(navaids)
add_subdirectory(otwdrive)
add_subdirectory(radar)
add_subdirectory(rwr)
add_subdirectory(simdrive)
add_subdirectory(siminput)
add_subdirectory(simlib)
add_subdirectory(simloop)
add_subdirectory(visual)