# ui library

set(UI_SOURCES
    src/campaign/campaign.cpp
    src/campaign/camphack.cpp
    src/campaign/campmenu.cpp
    src/campaign/cmap.cpp
    src/campaign/cpselect.cpp
    src/campaign/cstores.cpp
    src/campaign/general.cpp
    src/campaign/munition.cpp
    src/campaign/planner.cpp
    src/campaign/priority.cpp
    src/cmusic.cpp
    src/common/ato.cpp
    src/common/common.cpp
    src/common/events.cpp
    src/common/filters.cpp
    src/common/gps.cpp
    src/common/icondefs.cpp
    src/common/missions.cpp
    src/common/oob.cpp
    src/common/printer.cpp
    src/common/targets.cpp
    src/common/teamdata.cpp
    src/common/units.cpp
    src/common/urefresh.cpp
    src/common/waypoint.cpp
    src/comms/cpcomms.cpp
    src/comms/cphoneb.cpp
    src/comms/dfcomms.cpp
    src/comms/info.cpp
    src/comms/phonebk.cpp
    src/comms/queue.cpp
    src/comms/remotelb.cpp
    src/comms/serverbrowser.cpp
    src/comms/stats.cpp
    src/comms/ui_comms.cpp
    src/comms/uicomms.cpp
    src/dogfight/dfscores.cpp
    src/dogfight/dogfight.cpp
    src/dogfight/dogmenus.cpp
    src/f4config.cpp
    src/fsession.cpp
    src/general/c3dview.cpp
    src/general/cbsplist.cpp
    src/general/rle.cpp
    src/general/targa.cpp
    src/general/uihash.cpp
    src/general/viewer.cpp
    src/instant/instant.cpp
    src/logbook/logbook.cpp
    src/logbook/ui_lgbk.cpp
    src/setup/controltab.cpp
    src/setup/graphicstab.cpp
    src/setup/keydescrips.cpp
    src/setup/simoptn.cpp
    src/setup/simtab.cpp
    src/setup/soundtab.cpp
    src/setup/ui_setup.cpp
    src/taceng/tac_class.cpp
    src/taceng/tac_victory_conditions.cpp
    src/taceng/te_flight.cpp
    src/taceng/te_flow.cpp
    src/taceng/te_list.cpp
    src/taceng/te_map.cpp
    src/taceng/te_setup.cpp
    src/taceng/te_team.cpp
    src/taceng/te_team_victory.cpp
    src/taceng/te_territory_editor.cpp
    src/taceng/te_toolbar.cpp
    src/taceng/te_units.cpp
    src/taceng/ui_taceng.cpp
    src/tacref/tacref.cpp
    src/tacref/ui_tacref.cpp
    src/ui_help.cpp
    src/ui_main.cpp
    src/winmain.cpp
)

add_library(ui STATIC ${UI_SOURCES})

target_include_directories(ui PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${FF_SRC_DIR}
    ${FF_SRC_DIR}/include
    ${FF_SRC_DIR}/falclib/include
    ${FF_SRC_DIR}/codelib/include
    ${FF_SRC_DIR}/vu2/include
    ${FF_SRC_DIR}/sim/include
    ${FF_SRC_DIR}/campaign/include
    ${FF_SRC_DIR}/ui/include
    ${FF_SRC_DIR}/ui95
    ${FF_SRC_DIR}/ui95_ext
    ${FF_SRC_DIR}/graphics/include
)